--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
         "php": ">=7.1",
         "ext-rdkafka": "^4.0",
         "ext-pcntl": "^7.2",
-        "illuminate/support": "5.6.*"
+        "illuminate/support": "5.6.*",
+        "ext-json": "^1.6"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.4",
