--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^8.4",
-        "kwn/php-rdkafka-stubs": "^2.0"
+        "kwn/php-rdkafka-stubs": "^2.0",
+        "mockery/mockery": "^1.2"
     },
     "autoload": {
         "psr-4": {
@@ -20,7 +21,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Tests\\": "tests/"
+            "OneFit\\Events\\Tests\\": "tests/"
         }
     },
     "extra": {
