--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,9 @@
         "php": ">=7.1",
         "ext-rdkafka": "^4.0",
         "ext-pcntl": "^7.2",
-        "illuminate/support": "^5.6 || ^6.0",
-        "ext-json": "^1.6"
+        "ext-json": "^1.6",
+        "flix-tech/avro-serde-php": "^1.3",
+        "illuminate/support": "^5.8 || ^6.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.4",
