--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,14 @@
         "ext-pcntl": "^7.2",
         "ext-json": "^1.6 || ^7.4",
         "flix-tech/avro-serde-php": "^1.3",
-        "illuminate/support": "^5.8 || ^6.0"
+        "illuminate/support": "^5.8 || ^6.0",
+        "symfony/cache": "^5.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.4",
         "kwn/php-rdkafka-stubs": "^2.0",
-        "mockery/mockery": "^1.2"
+        "mockery/mockery": "^1.2",
+        "dg/bypass-finals": "^1.3"
     },
     "autoload": {
         "files": [
