--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,10 @@
         "ext-json": "^1.6 || ^7.4",
         "flix-tech/avro-serde-php": "^1.3",
         "illuminate/support": "^5.8 || ^6.0",
-        "symfony/cache": "^5.1"
+        "symfony/cache": "^5.1",
+        "symfony/framework-bundle": "^5.1",
+        "symfony/config": "^5.1",
+        "monolog/monolog": "^2.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.4",
