--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "symfony/cache": "^5.1",
         "symfony/framework-bundle": "^5.1",
         "symfony/config": "^5.1",
-        "monolog/monolog": "^2.1"
+        "monolog/monolog": "^2.1",
+        "symfony/expression-language": "^5.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.4",
