--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
         "ext-rdkafka": "^4.0",
         "ext-pcntl": "^7.2",
         "ext-json": "^1.6 || ^7.4",
-        "flix-tech/avro-serde-php": "^1.3",
-        "illuminate/support": "^5.8 || ^6.0"
+        "illuminate/support": "^5.8 || ^6.0",
+        "flix-tech/avro-serde-php": "^1.4"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.4",
